--- a/backend/deploy/nginx/conf.d/app.conf
+++ b/backend/deploy/nginx/conf.d/app.conf
@@ -3,24 +3,14 @@ server {
     listen       [::]:80 default_server;
     server_name  _;
 
-    root /data;
-
-    location ^~ /auth {
-        proxy_pass http://auth:8000;
+    location ^~ /queue {
+        proxy_pass http://queue-manager-service:8001;
     }
 
-    location ^~ /notifications {
-        proxy_pass http://notifications:8000;
-    }
-
-    location /1 {
-      try_files $uri $uri/ @app;
-    }
-
-    error_page  404              /404.html;
-
+    error_page   404              /404.html;
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   html;
     }
+
 }
