Исправлена сборка проекта party-manager-service

--- a/backend/docker-compose-dev.yml
+++ b/backend/docker-compose-dev.yml
@@ -38,9 +38,10 @@ services:
     depends_on:
       - mongodb
       - minio
-
+    env_file:
+      - ./party-manager-service/src/.env.fastapi
     ports:
-      - "8002:8002"
+      - "8002:8000"
 
   nginx:
     image: nginx:1.19.2
