--- a/backend/deploy/nginx/conf.d/app.conf
+++ b/backend/deploy/nginx/conf.d/app.conf
@@ -6,6 +6,20 @@ server {
     location ^~ /queue {
         proxy_pass http://queue-manager-service:8001;
     }
+    location ^~ /waiting_party {
+        proxy_pass http://queue-manager-service:8001;
+    }
+
+    # Websocket
+     location /waiting_party/api/v1/ws {
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_pass http://queue-manager-service:8001;
+    }
+
 
     error_page   404              /404.html;
     error_page   500 502 503 504  /50x.html;
