--- a/backend/queue-manager-service/src/requirements.txt
+++ b/backend/queue-manager-service/src/requirements.txt
@@ -1,7 +1,7 @@
 structlog==24.1.0
 pydantic-settings==2.1.0
 fastapi==0.109.0
-uvicorn==0.27.0
+uvicorn[standard]==0.27.1
 pydantic==2.5.3
 gunicorn==21.2.0
 faststream==0.3.14
@@ -16,4 +16,6 @@ PyJWT==2.8.0
 
 websockets==12.0
 redis==5.0.1
+python-multipart==0.0.9
+cryptography==42.0.5
 
