--- a/backend/auth-service/nginx/conf.d/site.conf
+++ b/backend/auth-service/nginx/conf.d/site.conf
@@ -3,13 +3,11 @@ server {
     listen       [::]:80 default_server;
     server_name  _;
 
-    location ^~ /auth {
-            proxy_pass http://auth-service:8000;
+    location /  {
+            proxy_pass http://fastapi:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Protocol $scheme;
         }
-
-    location ^~ /party-manager {
-        proxy_pass http://party-manager-service:8002;
-    }
 
     error_page   404              /404.html;
     error_page   500 502 503 504  /50x.html;
