Подправил fastapi.env.template

--- a/backend/auth-service/fastapi.env.template
+++ b/backend/auth-service/fastapi.env.template
@@ -1,11 +1,11 @@
 PROJECT_NAME=auth
+
 REDIS_HOST=redis
 REDIS_PORT=6379
-POSTGRES_PASSWORD=123qwe
-POSTGRES_HOST=db
-POSTGRES_PORT=5432
 
+POSTGRES_PASSWORD=123qwe
+POSTGRES_HOST=postgesql
+POSTGRES_PORT=5432
 POSTGRES_DB_NAME=users
 POSTGRES_USER=postgres
-
 POSTGRES_SCHEME=postgresql+asyncpg
