В docker compose интегрированы nginx и party-manager-service

--- a/party_manager_service/src/.env.fastapi
+++ b/party_manager_service/src/.env.fastapi
@@ -1,10 +1,14 @@
-PROJECT_NAME=notification-api
+PROJECT_NAME=party-manager-service
+MEDIA_SERVICE_URL=http://localhost/media-service/api/v1/hls
 
 MONGODB_URL=mongodb://mongodb:27017
-DATABASE_NAME=party_events
-COLLECTION_NAME=events_notification
+DATABASE_NAME=partyDb
+COLLECTION_NAME=parties
 
 RABBITMQ_HOST=rabbitmq
 RABBITMQ_PORT=5672
 RABBITMQ_LOGIN=user
 RABBITMQ_PASSWORD=rabbitmq
+
+REDIS_HOST=redis
+REDIS_PORT=6379
