--- a/deploy/nginx/conf.d/app.conf
+++ b/deploy/nginx/conf.d/app.conf
@@ -6,11 +6,7 @@ server {
     root /data;
 
     location ^~ /auth {
-        proxy_pass http://auth:8000;
-    }
-
-    location ^~ /notifications {
-        proxy_pass http://notifications:8000;
+        proxy_pass http://auth-service:8000;
     }
 
     location /1 {
