--- a/deploy/nginx/conf.d/site.conf
+++ b/deploy/nginx/conf.d/site.conf
@@ -5,10 +5,23 @@ server {
 
     location ^~ /auth {
             proxy_pass http://auth-service:8000;
-        }
+    }
 
-    location ^~ /queue {
-        proxy_pass http://queue-manager-service:8000;
+    location ^~ /party-manager-service {
+        proxy_pass http://party-manager-service:8000;
+
+        proxy_http_version              1.1;
+        proxy_set_header                Upgrade          $http_upgrade;
+        proxy_set_header                Connection       "Upgrade";
+        proxy_set_header                Host             $host;
+        proxy_set_header                X-Real-IP        $remote_addr;
+        proxy_set_header                X-Forwarded-For  $proxy_add_x_forwarded_for;
+        proxy_read_timeout              1800;
+        proxy_connect_timeout           1800;
+    }
+
+    location ^~ /media-service {
+        proxy_pass http://media-service:8000;
     }
 
     error_page   404              /404.html;
