--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -7,6 +7,10 @@ events {
 
 
 http {
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ''      close;
+    }
     include       mime.types;
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
