--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -45,10 +45,10 @@ services:
 
   media-service:
     build:
-      context: ./media_server/src
+      context: media_service/src
       dockerfile: Dockerfile
     env_file:
-      - ./media_server/src/.env.fastapi
+      - media_service/src/.env.fastapi
     ports:
       - "8003:8000"
 
