--- a/deploy/nginx/conf.d/site.conf
+++ b/deploy/nginx/conf.d/site.conf
@@ -24,6 +24,28 @@ server {
         proxy_pass http://media-service:8000;
     }
 
+    location ^~ /queue {
+        proxy_pass http://queue-manager-service:8001;
+    }
+    location ^~ /waiting_party {
+        proxy_pass http://queue-manager-service:8001;
+    }
+
+    # Websocket
+     location /waiting_party/api/v1/ws {
+        proxy_pass http://queue-manager-service:8000;
+
+        proxy_http_version              1.1;
+        proxy_set_header                Upgrade          $http_upgrade;
+        proxy_set_header                Connection       "Upgrade";
+        proxy_set_header                Host             $host;
+        proxy_set_header                X-Real-IP        $remote_addr;
+        proxy_set_header                X-Forwarded-For  $proxy_add_x_forwarded_for;
+        proxy_read_timeout              1800;
+        proxy_connect_timeout           1800;
+
+    }
+
     error_page   404              /404.html;
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
