--- a/deploy/nginx/conf.d/site.conf
+++ b/deploy/nginx/conf.d/site.conf
@@ -24,15 +24,15 @@ server {
         proxy_pass http://media-service:8000;
     }
 
-    location ^~ /queue {
-        proxy_pass http://queue-manager-service:8001;
+    location ^~ /queue-manager-service {
+        proxy_pass http://queue-manager-service:8000;
     }
     location ^~ /waiting_party {
-        proxy_pass http://queue-manager-service:8001;
+        proxy_pass http://queue-manager-service:8000;
     }
 
     # Websocket
-     location /waiting_party/api/v1/ws {
+     location /queue-manager-service/api/v1/waiting_party/ws {
         proxy_pass http://queue-manager-service:8000;
 
         proxy_http_version              1.1;
