--- a/deploy/nginx/conf.d/site.conf
+++ b/deploy/nginx/conf.d/site.conf
@@ -26,14 +26,6 @@ server {
 
     location ^~ /queue-manager-service {
         proxy_pass http://queue-manager-service:8000;
-    }
-    location ^~ /waiting_party {
-        proxy_pass http://queue-manager-service:8000;
-    }
-
-    # Websocket
-     location /queue-manager-service/api/v1/waiting_party/ws {
-        proxy_pass http://queue-manager-service:8000;
 
         proxy_http_version              1.1;
         proxy_set_header                Upgrade          $http_upgrade;
@@ -43,7 +35,15 @@ server {
         proxy_set_header                X-Forwarded-For  $proxy_add_x_forwarded_for;
         proxy_read_timeout              1800;
         proxy_connect_timeout           1800;
+    }
 
+    location /static {
+        alias /queue-manager-service/staticfiles;
+        expires 365d;
+    }
+
+    location / {
+      try_files $uri $uri/ @site;
     }
 
     error_page   404              /404.html;
