--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -16,6 +16,8 @@ services:
     build:
       context: ./queue-manager-service/src
       dockerfile: Dockerfile
+    volumes:
+      - staticfiles:/app/static
     depends_on:
       - redis
       - rabbitmq
@@ -47,7 +49,13 @@ services:
     volumes:
       - ./deploy/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./deploy/nginx/conf.d:/etc/nginx/conf.d:ro
+      - staticfiles:/queue-manager-service/staticfiles
     depends_on:
       - auth-service
+      - queue-manager-service
+      - party-manager-service
     ports:
       - "80:80"
+
+volumes:
+  staticfiles:
